--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <mat-toolbar class="mat-primary">S.Q.U.A.T.S. Videos</mat-toolbar>
+<sqts-video src="https://www.facebook.com/jitendra.chouksey.7/videos/1366255526720868/"></sqts-video>
 <router-outlet></router-outlet>
