--- a/src/components/search-video/search-video.component.html
+++ b/src/components/search-video/search-video.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="search-box">
-    <input matInput placeholder="Search videos" (keyup.enter)="search()" [(ngModel)]="searchText">
+    <input matInput placeholder="Search videos" (keyup)="search()" [(ngModel)]="searchText">
 </mat-form-field>
 
 <sqts-video *ngFor="let video of videos" [video]="video"></sqts-video>
