converts css to scss and it will work with angular-cli. also makes new reusable scss files.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-    <img src="../android-icon-36x36.png" alt="Squats Icon">
+<mat-toolbar class="sqts-navigation-header">
+    <img src="../android-icon-36x36.png" alt="Squats Icon" class="squats-logo">
     <span>S.Q.U.A.T.S. Videos</span>
 </mat-toolbar>
 
