--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<mat-toolbar class="mat-primary">S.Q.U.A.T.S. Videos</mat-toolbar>
+<mat-toolbar color="primary">
+    <img src="../android-icon-36x36.png" alt="Squats Icon">
+    <span>S.Q.U.A.T.S. Videos</span>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
