--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <img src="../android-icon-36x36.png" alt="Squats Icon">
-    <span>S.Q.U.A.T.S. Videos</span>
+    <span class="title">S.Q.U.A.T.S. Videos</span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
