--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="header">
     <img src="../android-icon-36x36.png" alt="Squats Icon">
     <span class="title">S.Q.U.A.T.S. Videos</span>
 </mat-toolbar>
