#20 set header title color to white

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,8 @@
 
 .sqts-navigation-header {
   background: $brand-primary;
+  color: $header-text-color;
+
   .squats-logo {
     border-radius: 50%;
     margin-right: $space-sm;
